# datasyn

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
datasyn/: app.py  helpers.py  publisher.py  settings.py  synthesizer.py
datasyn/entrypoints/: app.py
datasyn/service_layer/: publisher.py  synthesizer.py
tests/: conftest.py  pytest.ini  pytest.ini.example  test_app.py  test_faker_fuzziness.py  test_synthetic_event.py
tests/vcr_cassettes/: test_synthetic_messages.yaml
