[tool.poetry]
name = "datasyn"
version = "0.1.0"
description = "Simple Data Ingestion from pub/sub -> bigquery"
authors = ["Antonio <antonio.one@pm.me>"]
license = "TBC"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
