[tool.poetry]
name = "datasyn"
version = "0.1.0"
description = "Simple Data Ingestion from pub/sub -> bigquery"
authors = ["Antonio <antonio.one@pm.me>"]
license = "TBC"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
